--- a/ResponsiveWebsite.html
+++ b/ResponsiveWebsite.html
@@ -69,5 +69,18 @@
             </div>
         </div>
     </section>
+    <section class="bg-accent">
+        <div class="container">
+            <div class="split">
+                <div>
+                    <img src="sunset1.png" width="435px" alt="Image of sun rising behind the mountains">
+                </div>
+                <div>
+                    <h2 class="text-light">Created With Care</h2>
+                    <p class="text-size text-neutral">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae esse facere labore inventore sit corrupti hic ab atque repellendus ipsam!</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
