Fixed some minor issues

--- a/ResponsiveWebsite.html
+++ b/ResponsiveWebsite.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="split">
                 <div>
-                    <img src="sunset2.png" width="435px" alt="Image of sun rising behind the mountains">
+                    <img src="img/sunset2.png" width="435px" alt="Image of sun rising behind the mountains">
                 </div>
                 <div>
                     <h2 class="text-light">Created With Care</h2>
@@ -51,7 +51,7 @@
                     <p class="text-size text-neutral">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae esse facere labore inventore sit corrupti hic ab atque repellendus ipsam!</p>
                 </div>
                 <div>
-                    <img src="sunset1.png" width="435px" alt="Image of sun rising behind the mountains">
+                    <img src="img/sunset1.png" width="435px" alt="Image of sun rising behind the mountains">
                 </div>
             </div>
         </div>
