Modified content of this branch

--- a/ResponsiveWebsite.html
+++ b/ResponsiveWebsite.html
@@ -56,5 +56,12 @@
             </div>
         </div>
     </section>
+    <section class="bg-dark">
+        <div class="container">
+            <div class="split">
+                This is tiring at this point but okay
+            </div>
+        </div>
+    </section>
 </body>
 </html>
