--- a/ResponsiveWebsite.html
+++ b/ResponsiveWebsite.html
@@ -59,7 +59,7 @@
     <section class="bg-dark">
         <div class="container">
             <div class="split">
-                This is tiring at this point but okay
+                This is tiring at this point but okay and im also kind of bored of, just kidding, im enjoying this
             </div>
         </div>
     </section>
