adding some more content

--- a/ResponsiveWebsite.html
+++ b/ResponsiveWebsite.html
@@ -60,6 +60,7 @@
         <div class="container">
             <div class="split">
                 This is tiring at this point but okay and im also kind of bored of, just kidding, im enjoying this
+                adding some more changes for testing purpose
             </div>
         </div>
     </section>
