--- a/ResponsiveWebsite.html
+++ b/ResponsiveWebsite.html
@@ -61,6 +61,7 @@
             <div class="split">
                 This is tiring at this point but okay and im also kind of bored of, just kidding, im enjoying this
                 adding some more changes for testing purpose
+                Adding a bit more to it, please dont mind
             </div>
         </div>
     </section>
