--- a/ResponsiveWebsite.html
+++ b/ResponsiveWebsite.html
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="split">
                 This is tiring at this point but okay and im also kind of bored of, just kidding, im enjoying this
-                But something tells me that im behind few steps
+                But something tells me that im behind few steps, a few more
             </div>
         </div>
     </section>
