Added some markup in main

--- a/ResponsiveWebsite.html
+++ b/ResponsiveWebsite.html
@@ -63,5 +63,12 @@
             </div>
         </div>
     </section>
+    <section class="bg-dark">
+        <div class="container">
+            <div class="split">
+                adding some more markup for testing
+            </div>
+        </div>
+    </section>
 </body>
 </html>
